[package]
name = "listpack-redis"
version = "0.3.0"
edition = "2021"
authors = ["Viktor Polevoi <fx@thefx.co>"]
license = "LicenseRef-RSALv2 OR SSPL-1.0"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"

[dependencies]
libc = "0.2"
redis-custom-allocator = { git = "https://github.com/iddm/redis-custom-allocator" }
fastbloom = "0.7"
once_cell = "1"
